--- a/Front_Hack/src/App.css
+++ b/Front_Hack/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
@@ -13,11 +13,12 @@
   background: none;
   border: none;
 }
-.logo:hover {
-  filter: none;
-}
-.logo.react:hover {
-  filter: none;
+
+
+.error {
+  color: red;
+  margin-top: 8px;
+  font-size: 0.9rem;
 }
 
 @media (prefers-color-scheme: dark) {
